# Simple-TOML-Configurator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  versions.json
.github/workflows/: develop_docs.yml  python-app.yml  python-publish.yml  release_docs.yml  tests.yml
0.1/: index.html  objects.inv
0.1/usage-examples/: index.html
0.2/: 404.html
0.2/css/: code_select.css
0.2/examples/: index.html
0.2/exceptions/: index.html
0.2/installation/: index.html
0.3/: 404.html  index.html
0.3/configurator/: index.html
0.3/examples/: index.html
0.3/exceptions/: index.html
0.3/installation/: index.html
0.3/search/: search_index.json
0.3/usage-examples/: index.html
1.0.0/: 404.html  index.html  requirements.txt
1.0.0/configurator/: index.html
1.0.0/examples/: index.html
1.0.0/exceptions/: index.html
1.0.0/flask-custom-example/: index.html
1.0.0/flask-simple-example/: index.html
1.0.0/installation/: index.html
1.0.0/search/: search_index.json
1.0.0/usage-examples/: index.html
1.0.1/: 404.html  objects.inv  requirements.txt
1.0.1/changelog/: index.html
1.0.1/flask-custom-example/: index.html
1.0.1/installation/: index.html
1.0.1/search/: search_index.json
1.1.0/: index.html  objects.inv
1.2.0/: 404.html
1.3.0/: 404.html
develop/: 404.html  index.html  objects.inv
docs/: configurator.md  exceptions.md  flask-custom-example.md  flask-simple-example.md  installation.md  usage-examples.md
tests/: test_toml_configurator.py
(+34 files in other folders)
